fix: add missing peer dependencies

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "carbon-components": "10.7.3",
     "carbon-components-react": "7.7.3",
     "classnames": "^2.2.6",
+    "closest": "0.0.1",
     "codemirror": "^5.48.4",
     "cronstrue": "^1.58.0",
     "d3": "<=5.9.2",
@@ -27,6 +28,8 @@
     "js-file-download": "^0.4.4",
     "match-sorter": "^2.3.0",
     "moment-timezone": "^0.5.23",
+    "pathfinding": "^0.4.18",
+    "paths-js": "^0.4.10",
     "prop-types": "15.7.2",
     "query-string": "^6.8.3",
     "react": "16.10.2",
