--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@boomerang/boomerang-styles": "2.0.0",
     "@boomerang/boomerang-utilities": "2.3.1",
     "@boomerang/carbon-addons-boomerang": "2.6.4",
-    "@boomerang/carbon-addons-boomerang-react": "2.7.3",
+    "@boomerang/carbon-addons-boomerang-react": "^2.7.4",
     "@carbon/charts": "^0.16.24",
     "@carbon/charts-react": "^0.16.24",
     "@carbon/icons-react": "^10.4.1",
