--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3": "<=5.9.2",
     "detect-browser": "^4.0.3",
     "formik": "^2.0.8",
+    "immer": "^6.0.5",
     "immutability-helper": "^3.0.1",
     "js-file-download": "^0.4.4",
     "match-sorter": "^2.3.0",
@@ -48,6 +49,7 @@
     "redux-immutable-state-invariant": "2.1.0",
     "redux-thunk": "2.3.0",
     "typeface-ibm-plex-sans": "0.0.75",
+    "use-immer": "^0.4.0",
     "validator": "^10.7.1",
     "yup": "^0.27.0"
   },
