--- a/server/config/.env.local
+++ b/server/config/.env.local
@@ -1,4 +1,4 @@
-APP_ROOT=/flow
+APP_ROOT=/local
 APP_URL=localhost:3000
 PORT=3000
 NEW_RELIC_APP_NAME=
@@ -7,5 +7,6 @@ HTML_HEAD_INJECTED_DATA=
 HTML_HEAD_INJECTED_SCRIPTS=
 BASE_LAUNCH_ENV_URL=
 BASE_APPS_ENV_URL=
-BASE_SERVICE_ENV_URL=http://localhost:8000
+BASE_SERVICE_ENV_URL=http://localhost:8000/api
+PRODUCT_SERVICE_ENV_URL=http://localhost:8000/api
 
