--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@boomerang/boomerang-react-scripts": "4.6.2",
     "@boomerang/boomerang-styles": "2.0.0",
     "@boomerang/boomerang-utilities": "2.4.0",
-    "@boomerang/carbon-addons-boomerang-react": "0.0.327-5",
+    "@boomerang/carbon-addons-boomerang-react": "3.2.8",
     "@carbon/charts": "^0.16.24",
     "@carbon/charts-react": "^0.16.24",
     "@carbon/icons-react": "^10.10.2",
