fix: all tests working in global properties

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,7 @@
     "allowSyntheticDefaultImports": false,
     "baseUrl": "./src",
     "paths": {
+      "ApiServer/*": ["apiServer/*"],
       "Assets/*": ["assets/*"],
       "Components/*": ["components/*"],
       "Config/*": ["config/*"],
