--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "yup": "^0.27.0"
   },
   "devDependencies": {
-    "cypress": "4.3.0",
+    "cypress": "4.7.0",
+    "eslint-plugin-cypress": "^2.11.1",
     "http-proxy-middleware": "^0.20.0",
     "miragejs": "^0.1.40"
   },
