--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "homepage": "https://launch.boomerangplatform.net/BMRG_APP_ROOT_CONTEXT",
   "dependencies": {
-    "@boomerang/boomerang-react-scripts": "5.0.1",
+    "@boomerang/boomerang-react-scripts": "5.1.0",
     "@boomerang/boomerang-styles": "2.0.0",
     "@boomerang/boomerang-utilities": "2.4.0",
-    "@boomerang/carbon-addons-boomerang-react": "3.2.8",
+    "@boomerang/carbon-addons-boomerang-react": "3.3.4",
     "@carbon/charts": "^0.16.24",
     "@carbon/charts-react": "^0.16.24",
-    "@carbon/icons-react": "^10.10.2",
+    "@carbon/icons-react": "^10.12.0",
     "@projectstorm/react-diagrams": "^5.3.2",
     "axios": "0.19.2",
     "carbon-components": "10.12.0",
@@ -41,9 +41,9 @@
     "react-json-view": "^1.19.1",
     "react-lazylog": "4.5.2",
     "react-query": "^1.3.0",
-    "react-query-devtools": "^1.1.5",
     "react-router": "5.0.1",
     "react-router-dom": "5.1.2",
+    "react-tracked": "^1.4.0",
     "typeface-ibm-plex-sans": "0.0.75",
     "use-immer": "^0.4.0",
     "validator": "^10.7.1",
@@ -54,7 +54,8 @@
     "cypress": "4.7.0",
     "eslint-plugin-cypress": "^2.11.1",
     "http-proxy-middleware": "^0.20.0",
-    "miragejs": "^0.1.40"
+    "miragejs": "^0.1.40",
+    "react-query-devtools": "^1.1.5"
   },
   "scripts": {
     "analyze": "source-map-explorer server/build/static/js/main.*",
