--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,30 +1,82 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es2017",
+    "target": "es2020",
     "allowSyntheticDefaultImports": false,
     "baseUrl": "./src",
     "paths": {
-      "ApiServer/*": ["apiServer/*"],
-      "Assets/*": ["assets/*"],
-      "Components/*": ["components/*"],
-      "Config/*": ["config/*"],
-      "Constants/*": ["constants/*"],
-      "Features/*": ["features/*"],
-      "State/*": ["state/*"],
-      "Styles/*": ["styles/*"],
-      "Utilities/*": ["utilities/*"],
-      "Utils/*": ["utils/*"],
-      "~Assets/*": ["assets/*"],
-      "~Components/*": ["components/*"],
-      "~Config/*": ["config/*"],
-      "~Constants/*": ["constants/*"],
-      "~Features/*": ["features/*"],
-      "~State/*": ["state/*"],
-      "~Styles/*": ["styles/*"],
-      "~Utilities/*": ["utilities/*"],
-      "~Utils/*": ["utils/*"]
+      "ApiServer": [
+        "apiServer/*"
+      ],
+      "Assets/*": [
+        "assets/*"
+      ],
+      "Components/*": [
+        "components/*"
+      ],
+      "Config/*": [
+        "config/*"
+      ],
+      "Constants/*": [
+        "constants/*"
+      ],
+      "Features/*": [
+        "features/*"
+      ],
+      "Hooks/*": [
+        "hooks/*"
+      ],
+      "State/*": [
+        "state/*"
+      ],
+      "Styles/*": [
+        "styles/*"
+      ],
+      "Utilities/*": [
+        "utilities/*"
+      ],
+      "Utils/*": [
+        "utils/*"
+      ],
+      "~ApiServer": [
+        "apiServer/*"
+      ],
+      "~Assets/*": [
+        "assets/*"
+      ],
+      "~Components/*": [
+        "components/*"
+      ],
+      "~Config/*": [
+        "config/*"
+      ],
+      "~Constants/*": [
+        "constants/*"
+      ],
+      "~Features/*": [
+        "features/*"
+      ],
+      "~Hooks/*": [
+        "hooks/*"
+      ],
+      "~State/*": [
+        "state/*"
+      ],
+      "~Styles/*": [
+        "styles/*"
+      ],
+      "~Utilities/*": [
+        "utilities/*"
+      ],
+      "~Utils/*": [
+        "utils/*"
+      ]
     }
   },
-  "exclude": ["dist", "node_modules", "public", "server"]
+  "exclude": [
+    "dist",
+    "node_modules",
+    "public",
+    "server"
+  ]
 }
