--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "https://launch.boomerangplatform.net/BMRG_APP_ROOT_CONTEXT",
   "dependencies": {
-    "@boomerang/boomerang-react-scripts": "5.1.0",
+    "@boomerang/boomerang-react-scripts": "5.1.1",
     "@boomerang/boomerang-styles": "2.0.0",
     "@boomerang/boomerang-utilities": "2.4.0",
     "@boomerang/carbon-addons-boomerang-react": "3.3.5",
@@ -40,7 +40,7 @@
     "react-helmet": "^6.0.0",
     "react-json-view": "^1.19.1",
     "react-lazylog": "4.5.2",
-    "react-query": "^1.5.7",
+    "react-query": "1.5.8",
     "react-router": "5.0.1",
     "react-router-dom": "5.1.2",
     "typeface-ibm-plex-sans": "0.0.75",
@@ -63,7 +63,7 @@
     "cm": "git cz",
     "cypress": "cypress open",
     "cypress:run": "$(npm bin)/cypress run --config video=false",
-    "dev": "react-scripts start",
+    "dev": "run-p apiServer start",
     "dev:pf": "cross-env REACT_APP_PORT_FORWARD=true run-p apiServer start",
     "docker": "run-p docker:run apiServer",
     "docker:build": "docker build -t webapp .",
@@ -77,12 +77,12 @@
     "prod:rewriteAssetPaths": "cross-env APP_ROOT=/app node server/scripts/rewriteAssetPaths.js",
     "prod:server": "cd server && npm run-script dev",
     "start": "react-scripts start",
-    "test": "is-ci \"test:ci\" \"test:watch\"",
-    "test:ci": "react-scripts test  --coverage --outputFile=mocha.json --json",
+    "test": "react-scripts test",
+    "test:ci": "react-scripts test  --coverage",
     "test:ci-cypress": "start-server-and-test dev http://localhost:3000 cypress:run",
     "test:coverage": "react-scripts test --coverage",
     "test:staged": "cross-env CI=true react-scripts test --passWithNoTests --findRelatedTests --bail",
-    "test:static": "eslint -f json -o report.json ./src",
+    "test:static": "eslint -f json -o lint-report.json ./src",
     "test:watch": "react-scripts test",
     "upgradePackage": "react-scripts upgradePackage"
   },
@@ -125,10 +125,14 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "src/features/**/*.{js,jsx}",
-      "src/components/**/*.{js,jsx}",
-      "src/utilities/**/*.{js,jsx}",
-      "src/utils/**/*.{js,jsx}"
+      "!**/*.spec.{js,jsx}",
+      "!**/assets/**",
+      "**/src/components/**/*.{js,jsx}",
+      "**/src/features/**/*.{js,jsx}",
+      "**/src/hooks/**/*.{js,jsx}",
+      "**/src/state/**/*.{js,jsx}",
+      "**/src/utilities/**/*.{js,jsx}",
+      "**/src/utils/**/*.{js,jsx}"
     ]
   }
 }
