--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,78 +5,29 @@
     "allowSyntheticDefaultImports": false,
     "baseUrl": "./src",
     "paths": {
-      "ApiServer": [
-        "apiServer/*"
-      ],
-      "Assets/*": [
-        "assets/*"
-      ],
-      "Components/*": [
-        "components/*"
-      ],
-      "Config/*": [
-        "config/*"
-      ],
-      "Constants/*": [
-        "constants/*"
-      ],
-      "Features/*": [
-        "features/*"
-      ],
-      "Hooks/*": [
-        "hooks/*"
-      ],
-      "State/*": [
-        "state/*"
-      ],
-      "Styles/*": [
-        "styles/*"
-      ],
-      "Utilities/*": [
-        "utilities/*"
-      ],
-      "Utils/*": [
-        "utils/*"
-      ],
-      "~ApiServer": [
-        "apiServer/*"
-      ],
-      "~Assets/*": [
-        "assets/*"
-      ],
-      "~Components/*": [
-        "components/*"
-      ],
-      "~Config/*": [
-        "config/*"
-      ],
-      "~Constants/*": [
-        "constants/*"
-      ],
-      "~Features/*": [
-        "features/*"
-      ],
-      "~Hooks/*": [
-        "hooks/*"
-      ],
-      "~State/*": [
-        "state/*"
-      ],
-      "~Styles/*": [
-        "styles/*"
-      ],
-      "~Utilities/*": [
-        "utilities/*"
-      ],
-      "~Utils/*": [
-        "utils/*"
-      ]
+      "ApiServer": ["apiServer/*"],
+      "Assets/*": ["assets/*"],
+      "Components/*": ["components/*"],
+      "Config/*": ["config/*"],
+      "Constants/*": ["constants/*"],
+      "Features/*": ["features/*"],
+      "Hooks/*": ["hooks/*"],
+      "State/*": ["state/*"],
+      "Styles/*": ["styles/*"],
+      "Utilities/*": ["utilities/*"],
+      "Utils/*": ["utils/*"],
+      "~ApiServer": ["apiServer/*"],
+      "~Assets/*": ["assets/*"],
+      "~Components/*": ["components/*"],
+      "~Config/*": ["config/*"],
+      "~Constants/*": ["constants/*"],
+      "~Features/*": ["features/*"],
+      "~Hooks/*": ["hooks/*"],
+      "~State/*": ["state/*"],
+      "~Styles/*": ["styles/*"],
+      "~Utilities/*": ["utilities/*"],
+      "~Utils/*": ["utils/*"]
     }
   },
-  "exclude": [
-    "dist",
-    "node_modules",
-    "public",
-    "server"
-  ]
+  "exclude": ["dist", "node_modules", "public", "server"]
 }
