--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "homepage": "https://launch.boomerangplatform.net/BMRG_APP_ROOT_CONTEXT",
   "dependencies": {
     "@boomerang/boomerang-react-scripts": "5.1.1",
-    "@boomerang/boomerang-styles": "2.0.0",
+    "@boomerang/boomerang-styles": "2.0.1",
     "@boomerang/boomerang-utilities": "2.4.0",
-    "@boomerang/carbon-addons-boomerang-react": "3.3.5",
+    "@boomerang/carbon-addons-boomerang-react": "3.4.1",
     "@carbon/charts": "^0.16.24",
     "@carbon/charts-react": "^0.16.24",
     "@carbon/icons-react": "^10.12.0",
@@ -64,7 +64,7 @@
     "cypress": "cypress open",
     "cypress:run": "$(npm bin)/cypress run --config video=false",
     "dev": "run-p apiServer start",
-    "dev:pf": "cross-env REACT_APP_PORT_FORWARD=true run-p apiServer start",
+    "dev:pf": "cross-env REACT_APP_PORT_FORWARD=true run-p start",
     "docker": "run-p docker:run apiServer",
     "docker:build": "docker build -t webapp .",
     "docker:run": "docker run -i -t -p 3000: 3000 -e APP_ROOT=/app -e BASE_SERVICE_ENV_URL=http://localhost:8000 webapp",
