feat: init typescript impl

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "boomerang.app.flow",
   "version": "0.0.1",
   "private": true,
-  "homepage": "https://useboomerang.io/BMRG_APP_ROOT_CONTEXT",
+  "homepage": "https://useboomerang.io",
   "scripts": {
     "analyze": "source-map-explorer server/build/static/js/main.*",
     "build": "react-scripts build",
@@ -29,13 +29,25 @@
     "upgradePackage": "react-scripts upgradePackage"
   },
   "dependencies": {
+    "@boomerang-io/carbon-addons-boomerang-react": "0.0.2",
     "@boomerang-io/styles": "0.0.1",
     "@boomerang-io/utils": "0.0.1",
-    "@boomerang-io/carbon-addons-boomerang-react": "0.0.2",
     "@carbon/charts": "^0.16.24",
     "@carbon/charts-react": "^0.16.24",
     "@carbon/icons-react": "^10.12.0",
     "@projectstorm/react-diagrams": "^5.3.2",
+    "@types/carbon-components-react": "^7.10.6",
+    "@types/classnames": "^2.2.10",
+    "@types/jest": "^26.0.4",
+    "@types/lodash": "^4.14.157",
+    "@types/node": "^14.0.22",
+    "@types/react": "^16.9.43",
+    "@types/react-copy-to-clipboard": "^4.3.0",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.0.0",
+    "@types/react-query": "^1.1.2",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/yup": "^0.29.3",
     "axios": "0.19.2",
     "carbon-components": "10.12.0",
     "carbon-components-react": "7.12.0",
@@ -69,6 +81,7 @@
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
     "typeface-ibm-plex-sans": "0.0.75",
+    "typescript": "^3.9.6",
     "use-immer": "^0.4.0",
     "validator": "^10.7.1",
     "webpack-hot-middleware": "^2.25.0",
