--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@types/classnames": "^2.2.10",
     "@types/jest": "^26.0.4",
     "@types/lodash": "^4.14.157",
+    "@types/match-sorter": "^4.0.0",
     "@types/node": "^14.0.22",
     "@types/react": "^16.9.43",
     "@types/react-copy-to-clipboard": "^4.3.0",
