--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cronstrue": "^1.58.0",
     "d3": "<=5.9.2",
     "detect-browser": "^4.0.3",
+    "flagged": "^2.0.1",
     "formik": "^2.1.4",
     "immer": "^6.0.5",
     "immutability-helper": "^3.0.1",
@@ -113,7 +114,8 @@
     "prettier": "2.0.5",
     "react-query-devtools": "^1.2.0",
     "start-server-and-test": "^1.10.11",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "typescript-plugin-css-modules": "^2.4.0"
   },
   "browserslist": {
     "production": [
