--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
 
   "exclude": ["dist", "node_modules", "public", "server"],
