--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@carbon/charts-react": "^0.16.24",
     "@carbon/icons-react": "^10.12.0",
     "@projectstorm/react-diagrams": "^5.3.2",
+    "@types/reflexbox": "^4.0.1",
     "axios": "0.19.2",
     "carbon-components": "10.12.0",
     "carbon-components-react": "7.12.0",
@@ -69,6 +70,7 @@
     "react-router": "5.0.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
+    "reflexbox": "^4.0.6",
     "typeface-ibm-plex-sans": "0.0.75",
     "use-immer": "^0.4.0",
     "validator": "^10.7.1",
