--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@projectstorm/react-diagrams": "^5.3.2",
     "@types/reflexbox": "^4.0.1",
     "axios": "0.19.2",
+    "axios-hooks": "^2.1.0",
     "carbon-components": "10.12.0",
     "carbon-components-react": "7.12.0",
     "classnames": "^2.2.6",
