feat: update to use ncp

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "analyze": "source-map-explorer server/build/static/js/main.*",
     "build": "react-scripts build",
     "build:rewriteAssetPaths": "cross-env APP_ROOT=/local node server/scripts/rewriteAssetPaths.js",
-    "postbuild": "copyfiles build/**/* server",
+    "postbuild": "ncp build server/build",
     "cm": "git cz",
     "cypress": "cypress open",
     "docker": "cross-env NODE_ENV=test run-s docker:build docker:run",
@@ -98,7 +98,6 @@
     "@types/reflexbox": "^4.0.1",
     "@types/yup": "^0.29.3",
     "commitizen": "4.0.3",
-    "copyfiles": "2.3.0",
     "cross-env": "7.0.2",
     "cypress": "4.11.0",
     "cz-conventional-changelog": "3.1.0",
@@ -111,6 +110,7 @@
     "jest-axe": "^3.4.0",
     "lint-staged": "10.1.1",
     "miragejs": "^0.1.40",
+    "ncp": "^2.0.0",
     "node-sass": "4.14.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.0.5",
