--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "16.13.1",
     "react-dropzone": "^10.1.10",
+    "react-error-boundary": "^2.3.1",
     "react-helmet": "^6.0.0",
     "react-json-view": "^1.19.1",
     "react-lazylog": "4.5.2",
