--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@types/match-sorter": "^4.0.0",
     "@types/node": "^14.0.22",
     "@types/react": "^16.9.43",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.0.0",
