fix: boomerang properties

--- a/_boomerang/.boomerang.properties
+++ b/_boomerang/.boomerang.properties
@@ -8,11 +8,10 @@ notifications.slack.channel=
 notifications.slack.dm=
 
 filter.target=tag
-filter.expression=^(\d+\.)(\d+\.)(\*|\d+)?(-(\w+)(\.?\d*)?)?$
+filter.expression=^(\d+\.)(\d+\.)(\*|\d+)?(-(alpha|beta)(\.?\d*)?)?$
 
 docker.enable=true
-docker.image.name=bmrg-app-ci
+docker.image.name=bmrg-app-flow
 
-helm.chart=bmrg-cicd
-helm.image.tag=apps.cicd.image.tag
-
+helm.chart=bmrg-flow
+helm.image.tag=apps.flow.image.tag
