--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@types/react-query": "^1.1.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/reflexbox": "^4.0.1",
+    "@types/validator": "^13.1.0",
     "@types/yup": "^0.29.3",
     "commitizen": "4.0.3",
     "cross-env": "7.0.2",
