--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.0.5",
     "react-query-devtools": "^1.2.0",
+    "react-test-renderer": "^16.13.1",
     "start-server-and-test": "^1.10.11",
     "typescript": "^3.9.6",
     "typescript-plugin-css-modules": "^2.4.0"
