:hammer: updated CICD config

--- a/_boomerang/.boomerang.properties
+++ b/_boomerang/.boomerang.properties
@@ -3,15 +3,8 @@ mode=nodejs
 build.tool=npm
 build.tool.version=3.3.9
 
-notifications.type=slack
-notifications.slack.channel=
-notifications.slack.dm=
-
-filter.target=tag
-filter.expression=^(\d+\.)(\d+\.)(\*|\d+)?(-(alpha|beta)(\.?\d*)?)?$
-
 docker.enable=true
-docker.image.name=bmrg-app-flow
+docker.image.name=bmrg-flow-client-web
 
 helm.chart=bmrg-flow
 helm.image.tag=apps.flow.image.tag
