:hammer: updated CICD config

--- a/_boomerang/.boomerang.properties
+++ b/_boomerang/.boomerang.properties
@@ -4,7 +4,7 @@ build.tool=npm
 build.tool.version=3.3.9
 
 docker.enable=true
-docker.image.name=bmrg-flow-client-web
+docker.image.name=flow-client-web
 
 helm.chart=bmrg-flow
 helm.image.tag=apps.flow.image.tag
