feat: update docker image name

--- a/_boomerang/.boomerang.properties
+++ b/_boomerang/.boomerang.properties
@@ -11,7 +11,7 @@ filter.target=tag
 filter.expression=^(\d+\.)(\d+\.)(\*|\d+)?(-(alpha|beta)(\.?\d*)?)?$
 
 docker.enable=true
-docker.image.name=bmrg-app-flow
+docker.image.name=flow-client-web
 
 helm.chart=bmrg-flow
 helm.image.tag=apps.flow.image.tag
