fix: env variable usage

--- a/server/config/.env.local
+++ b/server/config/.env.local
@@ -5,8 +5,8 @@ NEW_RELIC_APP_NAME=
 NEW_RELIC_LICENSE_KEY= 
 HTML_HEAD_INJECTED_DATA=
 HTML_HEAD_INJECTED_SCRIPTS=
-BASE_LAUNCH_ENV_URL=
+CORE_ENV_URL=
 BASE_APPS_ENV_URL=
-BASE_SERVICE_ENV_URL=http://localhost:8000/api
+CORE_SERVICE_ENV_URL=http://localhost:8000/api
 PRODUCT_SERVICE_ENV_URL=http://localhost:8000/api
 
