--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@carbon/charts-react": "^0.16.24",
     "@carbon/icons-react": "^10.12.0",
     "@projectstorm/react-diagrams": "^5.3.2",
+    "@types/react-lazylog": "^4.5.0",
     "axios": "0.19.2",
     "axios-hooks": "^2.1.0",
     "carbon-components": "10.12.0",
