--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "upgradePackage": "react-scripts upgradePackage"
   },
   "dependencies": {
-    "@boomerang-io/carbon-addons-boomerang-react": "0.0.19",
+    "@boomerang-io/carbon-addons-boomerang-react": "0.0.22-beta.3",
     "@boomerang-io/styles": "0.0.1",
     "@boomerang-io/utils": "0.0.1",
     "@carbon/charts": "^0.16.24",
@@ -38,8 +38,8 @@
     "@projectstorm/react-diagrams": "^5.3.2",
     "axios": "0.19.2",
     "axios-hooks": "^2.1.0",
-    "carbon-components": "10.12.0",
-    "carbon-components-react": "7.12.0",
+    "carbon-components": "10.22.0",
+    "carbon-components-react": "7.22.0",
     "classnames": "^2.2.6",
     "closest": "0.0.1",
     "codemirror": "^5.48.4",
