--- a/package.json
+++ b/package.json
@@ -67,10 +67,12 @@
     "react-helmet": "^6.0.0",
     "react-json-view": "^1.19.1",
     "react-lazylog": "4.5.2",
+    "react-markdown": "^5.0.2",
     "react-query": "2.4.14",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
     "reflexbox": "^4.0.6",
+    "remark-gfm": "^1.0.0",
     "typeface-ibm-plex-sans": "0.0.75",
     "use-immer": "^0.4.0",
     "validator": "^10.7.1",
